# loyalty-card-generator

./: .gitignore  LICENSE  README.md  docker-compose.yml  example.env  pyproject.toml
.github/: dependabot.yml
.github/workflows/: quality.yml
cards/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
cards/management/: __init__.py
cards/management/commands/: __init__.py  expire_cards.py
cards/migrations/: 0001_initial.py
cards/tests/: __init__.py  factories.py  test_forms.py  test_models.py  test_services.py  test_views.py
config/: settings.py  urls.py
scripts/: format  lint  test
templates/: base.html
templates/cards/: card_detail.html  card_generate.html  card_list.html
